[Bug fixed] broken layout in chrome - image uploading

--- a/app/assets/stylesheets/scss/application.css.scss
+++ b/app/assets/stylesheets/scss/application.css.scss
@@ -884,7 +884,7 @@ textarea { padding-top:5px; }
 
 #edit-profile-info-popup {
   width: 401px;
-  input, textarea { width: 233px; }
+  input, textarea { width: 232px; }
   .note { width:100px; padding-top: 10px;}
   #btn-update { margin: 0 10px 0 120px;}
 }
@@ -1091,7 +1091,7 @@ textarea { padding-top:5px; }
 #edit-gallery-popup {
   width: 390px;
   .main-panel {
-    input, textarea { width: 233px; }
+    input, textarea { width: 232px; }
     .label { width: 89px; }
     .note { margin: 6px 0 0 10px;}
     #button-container {
